--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 		<script src="dist/js/homeComponent.js"></script>
 		<script src="dist/js/projectsData.js"></script>
-		<script src="dist/js/projectComponent.js"></script>>
+		<script src="dist/js/projectComponent.js"></script>
 		<script src="dist/js/main.js"></script>
 
 	</body>
