--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 	<body>
 
 		<div class="wrapper">
-		<h1>Angelica</h1>
+		<h1><a href="index.html">Angelica</a></h1>
 		
 			<div id="app">
 				<transition name="fade">
 					<router-view
-						:projects="projects"
+						:teams="teams"
+						:vuejs="vuejs"
+						:node="node"
 						>	
 						
 					</router-view>
