--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<script src="dist/js/homeComponent.js"></script>
 		<script src="dist/js/projectsData.js"></script>
 		<script src="dist/js/projectComponent.js"></script>
+		<script src="dist/js/teamsComponent.js"></script>
 		<script src="dist/js/main.js"></script>
 
 	</body>
