--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		<script src="dist/js/projectsData.js"></script>
 		<script src="dist/js/projectComponent.js"></script>
 		<script src="dist/js/teamsComponent.js"></script>
+		<script src="dist/js/nodeComponent.js"></script>
+		<script src="dist/js/vuejsComponent.js"></script>
 		<script src="dist/js/main.js"></script>
 
 	</body>
